Update github button

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,18 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+    <div class="github-button-wrapper">
+      <a
+        class="github-button"
+        href="https://github.com/danakt/minesweeper"
+        data-icon="octicon-eye"
+        data-size="large"
+        aria-label="View danakt/minesweeper on GitHub"
+        >View</a
+      >
+    </div>
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
